Updated website styling and layout changes

--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
     <!-- Navigation -->
     <nav class="navbar navbar-expand-lg navbar-light bg-light fixed-top">
         <div class="container">
-            <a class="navbar-brand" href="#">MUCKE & MÄHNE</a>
+            <a class="navbar-brand" href="#"><img src="Images/Logo_MM.png" alt="MUCKE & MÄHNE Logo" height="40"> MUCKE & MÄHNE</a>
             <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav">
                 <span class="navbar-toggler-icon"></span>
             </button>
@@ -32,7 +32,7 @@
     <section id="home" class="hero">
         <div class="hero-content">
             <h1>Willkommen bei</h1>
-            <h1>MUCKE & MÄHNE</h1>
+            <img src="Images/Logo_MM.png" alt="MUCKE & MÄHNE" class="img-fluid mb-4" style="max-width: 800px;">
             <p>Ihr Friseursalon für den perfekten Look</p>
             <a href="#contact" class="btn btn-primary">Termin vereinbaren</a>
         </div>
@@ -87,6 +87,51 @@
                         <img src="https://images.unsplash.com/photo-1470259078422-826894b933aa" alt="Färben" class="img-fluid">
                         <h3>Färben</h3>
                         <p>ab 55€</p>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </section>
+    <!-- Philosophie Section -->
+    <section id="philosophie" class="py-5">
+        <div class="container">
+            <h2 class="text-center mb-5">Unsere Philosophie</h2>
+            <div class="row justify-content-center">
+                <div class="col-md-8">
+                    <div class="card p-4 shadow-sm">
+                        <div class="card-body">
+                            <p class="lead">Bei MUCKE & MÄHNE glauben wir, dass Schönheit und Wohlbefinden Hand in Hand gehen. Unser Ziel ist es, jedem Kunden ein individuelles und entspanntes Erlebnis zu bieten – mit viel Herz, Kreativität und handwerklicher Präzision.</p>
+                            <ul>
+                                <li>Wir nehmen uns Zeit für Beratung und persönliche Wünsche.</li>
+                                <li>Wir arbeiten mit hochwertigen, nachhaltigen Produkten.</li>
+                                <li>Wir fördern ein freundliches, familiäres Miteinander im Salon.</li>
+                                <li>Wir bilden uns regelmäßig weiter, um Trends und Techniken zu beherrschen.</li>
+                            </ul>
+                            <p>Ihr Wohlbefinden und Ihre Zufriedenheit stehen bei uns an erster Stelle!</p>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </section>
+
+    <!-- Philosophie Section -->
+    <section id="products" class="py-5 bg-light">
+        <div class="container">
+            <h2 class="text-center mb-5">Unsere Produkte</h2>
+            <div class="row justify-content-center">
+                <div class="col-md-8">
+                    <div class="card p-4 shadow-sm">
+                        <div class="card-body">
+                            <p class="lead">Bei MUCKE & MÄHNE glauben wir, dass Schönheit und Wohlbefinden Hand in Hand gehen. Unser Ziel ist es, jedem Kunden ein individuelles und entspanntes Erlebnis zu bieten – mit viel Herz, Kreativität und handwerklicher Präzision.</p>
+                            <ul>
+                                <li>Wir nehmen uns Zeit für Beratung und persönliche Wünsche.</li>
+                                <li>Wir arbeiten mit hochwertigen, nachhaltigen Produkten.</li>
+                                <li>Wir fördern ein freundliches, familiäres Miteinander im Salon.</li>
+                                <li>Wir bilden uns regelmäßig weiter, um Trends und Techniken zu beherrschen.</li>
+                            </ul>
+                            <p>Ihr Wohlbefinden und Ihre Zufriedenheit stehen bei uns an erster Stelle!</p>
+                        </div>
                     </div>
                 </div>
             </div>
