Update button style: increase padding and adjust colors

--- a/index.html
+++ b/index.html
@@ -34,7 +34,10 @@
             <h1>Willkommen bei</h1>
             <img src="Images/Logo_MM.png" alt="MUCKE & MÄHNE" class="img-fluid mb-4" style="max-width:70%;">
             <p>Ihr Friseursalon für den perfekten Look</p>
-            <a href="#contact" class="btn btn-primary">Termin vereinbaren</a>
+            <div class="alert alert-info p-3 mb-4 fw-bold text-center" style="background: rgba(255,255,255,0.9); border: 2px solid #6B2E2E; border-radius: 15px; font-size: 1.5rem; color: #6B2E2E;">
+                <i class="bi bi-scissors me-2"></i>Wir eröffnen im Januar 2026<i class="bi bi-scissors ms-2"></i>
+            </div>
+            <a href="#contact" class="btn btn-primary" style="background-color: #6B2E2E  !important; border-width: 2px; border-color: #6B2E2E !important; padding: 20px 30px;">Jetzt Termin vereinbaren</a>
         </div>
     </section>
 
@@ -45,7 +48,7 @@
             <div class="row">
                 <div class="col-md-6">
                     <div class="team-member">
-                        <img src="https://images.unsplash.com/photo-1595867818082-083862f3d630" alt="Tina Mucke" class="img-fluid rounded-circle mb-3">
+                        <img src="Images/Tina_kl.jpg" alt="Tina Mucke" class="img-fluid rounded-circle mb-3">
                         <h3>Tina Mucke</h3>
                         <p>Meisterfriseurin & Inhaberin</p>
                         <p>Spezialisiert auf Colorationen und Hochsteckfrisuren</p>
@@ -53,9 +56,9 @@
                 </div>
                 <div class="col-md-6">
                     <div class="team-member">
-                        <img src="https://images.unsplash.com/photo-1622286342621-4bd786c2447c" alt="Nils Mucke" class="img-fluid rounded-circle mb-3">
+                        <img src="Images/Nils_kl.jpg" alt="Nils Mucke" class="img-fluid rounded-circle mb-3">
                         <h3>Nils Mucke</h3>
-                        <p>Meisterfriseur & Inhaber</p>
+                        <p>Leidenschaftlicher Friseur & Inhaber</p>
                         <p>Experte für Herrenschnitte und Bartpflege</p>
                     </div>
                 </div>
@@ -180,16 +183,16 @@
                     </ul>
                     <h3 class="mt-4">Terminvereinbarung</h3>
                     <p>
-                        <i class="bi bi-whatsapp"></i> WhatsApp: +49 123 456789<br>
-                        <i class="bi bi-envelope"></i> Email: termin@muckeundmaehne.de
+                        <i class="bi bi-whatsapp"></i> WhatsApp: +49 1578 35 027 88<br>
+                        <i class="bi bi-envelope"></i> Email: muckemaehne@gmail.de
                     </p>
                 </div>
                 <div class="col-md-6">
                     <h3>Adresse</h3>
                     <p>
-                        Mucke und Mähne<br>
-                        Hauptstraße 123<br>
-                        12345 Musterstadt
+                        Mucke & Mähne<br>
+                        Aarstraße 141<br>
+                        65232 Taunusstein Hahn
                     </p>
                     <div class="social-media mt-4">
                         <h3>Social Media</h3>
