Update website layout: improved product cards, consistent spacing, RICA logo placeholder, and aligned philosophy section

--- a/index.html
+++ b/index.html
@@ -34,10 +34,10 @@
             <h1>Willkommen bei</h1>
             <img src="Images/Logo_MM.png" alt="MUCKE & MÄHNE" class="img-fluid mb-4" style="max-width:70%;">
             <p>Ihr Friseursalon für den perfekten Look</p>
-            <div class="alert alert-info p-3 mb-4 fw-bold text-center" style="background: rgba(255,255,255,0.9); border: 2px solid #6B2E2E; border-radius: 15px; font-size: 130%; color: #6B2E2E;">
+            <div class="alert alert-info p-3 mb-4 fw-bold text-center" style="background: rgba(255,255,255,0.9); border: 2px solid #9A0708; border-radius: 15px; font-size: 130%; color: #9A0708;">
                 <i class="bi bi-scissors me-2"></i>Wir eröffnen im Januar 2026<i class="bi bi-scissors ms-2"></i>
             </div>
-            <a href="#contact" class="btn btn-primary" style="background-color: #6B2E2E  !important; border-width: 2px; border-color: #6B2E2E !important; padding: 20px 30px;">Jetzt Termin vereinbaren</a>
+            <a href="#contact" class="btn btn-primary" style="background-color: #6B2E2E  !important; border-width: 2px; border-color: #6B2E2E!important; padding: 20px 30px;">Jetzt Termin vereinbaren</a>
         </div>
     </section>
 
@@ -51,7 +51,7 @@
                         <img src="Images/Tina_kl.jpg" alt="Tina Mucke" class="img-fluid rounded-circle mb-3">
                         <h3>Tina Mucke</h3>
                         <p>Meisterfriseurin & Inhaberin</p>
-                        <p>Spezialisiert auf Colorationen und Hochsteckfrisuren</p>
+                        <p>Spezialisiert auf Damenhaarschnitte, Farben und Strähnen jeder Art und Naturlocken</p>
                     </div>
                 </div>
                 <div class="col-md-6">
@@ -73,21 +73,21 @@
             <div class="row">
                 <div class="col-md-4">
                     <div class="service-card">
-                        <img src="https://images.unsplash.com/photo-1492106087820-71f1a00d2b11" alt="Damenschnitt" class="img-fluid">
+                        <img src="Images/Damen.png" alt="Damenschnitt" class="img-fluid">
                         <h3>Damenschnitte</h3>
-                        <p>ab 35€</p>
+                        <p>ab 41€</p>
                     </div>
                 </div>
                 <div class="col-md-4">
                     <div class="service-card">
                         <img src="https://images.unsplash.com/photo-1503951914875-452162b0f3f1" alt="Herrenschnitt" class="img-fluid">
                         <h3>Herrenschnitte</h3>
-                        <p>ab 25€</p>
+                        <p>ab 30€</p>
                     </div>
                 </div>
                 <div class="col-md-4">
                     <div class="service-card">
-                        <img src="https://images.unsplash.com/photo-1470259078422-826894b933aa" alt="Färben" class="img-fluid">
+                        <img src="Images/color.jpg" alt="Färben" class="img-fluid">
                         <h3>Färben</h3>
                         <p>ab 55€</p>
                     </div>
@@ -100,7 +100,7 @@
         <div class="container">
             <h2 class="text-center mb-5">Unsere Philosophie</h2>
             <div class="row justify-content-center">
-                <div class="col-md-8">
+                <div class="col-md-10">
                     <div class="card p-4 shadow-sm">
                         <div class="card-body">
                             <p class="lead">Bei MUCKE & MÄHNE glauben wir, dass Schönheit und Wohlbefinden Hand in Hand gehen. Unser Ziel ist es, jedem Kunden ein individuelles und entspanntes Erlebnis zu bieten – mit viel Herz, Kreativität und handwerklicher Präzision.</p>
@@ -118,22 +118,115 @@
         </div>
     </section>
 
-    <!-- Philosophie Section -->
+    <!-- Produkte Section -->
     <section id="products" class="py-5 bg-light">
         <div class="container">
             <h2 class="text-center mb-5">Unsere Produkte</h2>
-            <div class="row justify-content-center">
-                <div class="col-md-8">
+            <div class="row justify-content-center align-items-stretch">
+                <div class="col-md-6 d-flex">
+                    <div class="card p-4 shadow-sm d-flex flex-column justify-content-center w-100" style="height: 300px;">
+                        <div class="card-body">
+                            <h4 class="mb-3" style="color: #9A0708;">RICA Haircare</h4>
+                            <p class="lead">Bei uns im Salon setzen wir auf Rica Haircare – eine Marke, die für natürliche Pflege, nachhaltige Werte und professionelles Styling steht.</p>
+                            <p>Mit veganen Formeln, ohne belastende Zusätze und mit sanften, hochwertigen Inhaltsstoffen sorgen die Produkte dafür, dass sich dein Haar gesund, glänzend und einfach gut anfühlt.</p>
+                        </div>
+                    </div>
+                </div>
+                <div class="col-md-4 d-flex">
+                    <div class="text-center d-flex align-items-center w-100">
+                        <img src="Images/acronimo.jpg" alt="Rica Haircare Produkte" class="img-fluid rounded shadow" style="max-height: 300px; object-fit: cover; width: 100%;">
+                    </div>
+                </div>
+            </div>
+
+            <!-- Zweite Produktkarte -->
+            <div class="row justify-content-center align-items-stretch mt-5">
+                <div class="col-md-5">
+                    <!-- Bild (oben) -->
+                    <div style="background-color: #f8f9fa; border-radius: 10px; overflow: hidden; margin-bottom: 30px;">
+                        <img src="Images/Naturica1_kl.jpg" alt="Mediterrane Haarpflege" class="img-fluid rounded shadow" style="width: 100%; height: auto; object-fit: contain; display: block;">
+                    </div>
+                    <!-- Dritte Produktkarte (unten) -->
+                    <div class="card shadow-sm" style="height: 100px; display: flex; align-items: center; justify-content: center;">
+                        <div style="padding: 15px;">
+                            <h4 class="mb-1" style="color: #85AA99;">Professionelle Haarpflege</h4>
+                            <h5 class="mb-0" style="color: #85AA99;">aus 96% natürlichen Inhaltsstoffen.</h5>
+                        </div>
+                    </div>
+                </div>
+                <div class="col-md-5 d-flex">
+                    <div class="card p-4 shadow-sm d-flex flex-column justify-content-center w-100" style="height: 100%;">
+                        <div class="card-body">
+                            <h4 class="mb-1" style="color: #85AA99;">100 % vegan</h4>
+                            <h4 class="mb-3" style="color: #85AA99;">Schönheit aus der Natur</h4>
+                            <p class="lead">Rica's Produktlinie "NATURICA" ist mehr als Kosmetik – sie sind ein Stück mediterranes Lebensgefühl. Mit natürlichen Zutaten aus Sizilien verwöhnen wir dein Haar und schenken ihm neue Kraft und Glanz.</p>
+                            <p>Ob trocken, coloriert oder empfindlich – die sanften Rezepturen passen sich jedem Haar- und Hauttyp an. Reich an mediterranen Wirkstoffen nähren, befeuchten und schützen sie dein Haar und machen es stark und strahlend schön.</p>
+                            <p>Damit deine Haarfarbe ihre Leuchtkraft lange behält, sind alle Produkte farbschonend formuliert – für langanhaltende Schönheit mit gutem Gewissen.</p>
+                        </div>
+                    </div>
+                </div>
+            </div>
+
+            <!-- Vierte Produktkarte -->
+            <div class="row justify-content-center mt-5">
+                <div class="col-md-6">
+                    <!-- Text (links) -->
                     <div class="card p-4 shadow-sm">
                         <div class="card-body">
-                            <p class="lead">Bei MUCKE & MÄHNE glauben wir, dass Schönheit und Wohlbefinden Hand in Hand gehen. Unser Ziel ist es, jedem Kunden ein individuelles und entspanntes Erlebnis zu bieten – mit viel Herz, Kreativität und handwerklicher Präzision.</p>
-                            <ul>
-                                <li>Wir nehmen uns Zeit für Beratung und persönliche Wünsche.</li>
-                                <li>Wir arbeiten mit hochwertigen, nachhaltigen Produkten.</li>
-                                <li>Wir fördern ein freundliches, familiäres Miteinander im Salon.</li>
-                                <li>Wir bilden uns regelmäßig weiter, um Trends und Techniken zu beherrschen.</li>
-                            </ul>
-                            <p>Ihr Wohlbefinden und Ihre Zufriedenheit stehen bei uns an erster Stelle!</p>
+                            <h4 class="mb-1" style="color: #9A0708;">Chromoplus</h4>
+                            <h4 class="mb-3" style="color: #9A0708;">Strahlende Farben mit gutem Gewissen</h4>
+                            <p class="lead">Mit Ricas's Chromoplus bieten wir dir eine Haarfarbe, die nicht nur wunderschöne Ergebnisse zaubert, sondern auch auf dich und die Natur Rücksicht nimmt. Die Farben sind 100 % vegan, frei von belastenden Stoffen wie Parabenen oder Sulfaten und dermatologisch getestet – für ein angenehmes und sicheres Farberlebnis.</p>
+                            <p>Dank wertvoller Inhaltsstoffe wie Marula-Öl, Quinoa und mediterranen Pflanzenextrakten wird dein Haar während der Coloration gepflegt, geschützt und gestärkt. So bleibt es gesund, glänzend und voller Lebenskraft.</p>
+                            <p>Ob sanfte Tönung oder intensive Veränderung – mit über 100 Nuancen finden wir gemeinsam den perfekten Farbton, der deine Persönlichkeit unterstreicht. Und das Beste: die Rezeptur schützt deine Haarfarbe, sodass sie lange strahlend schön bleibt.</p>
+                            <p>Bei uns im Salon bedeutet Coloration nicht nur ein neuer Look – es ist ein Verwöhnmoment für dich und dein Haar.</p>
+                        </div>
+                    </div>
+                </div>
+                <div class="col-md-4 d-flex align-items-start">
+                    <!-- Chromoplus Bild rechts -->
+                    <div style="background-color: #f8f9fa; border-radius: 10px; overflow: hidden; width: 100%; display: flex; justify-content: flex-end;">
+                        <img src="Images/chromoplus2.png" alt="Chromoplus Haarfarben" class="img-fluid rounded shadow" style="width: 100%; height: auto; object-fit: contain;">
+                    </div>
+                </div>
+            </div>
+
+            <!-- Fünfte Produktkarte - RICA Transparenz -->
+            <div class="row justify-content-center mt-5">
+                <div class="col-md-10">
+                    <div class="card p-4 shadow-sm">
+                        <div class="card-body">
+                            <div class="text-center mb-3">
+                                <!-- Logo Platzhalter -->
+                                <img src="Images/Ricalogo.png" alt="RICA Logo" class="img-fluid" style="max-height: 80px; background-color: #f8f9fa; border: 2px solid black; padding: 10px; border-radius: 8px;" onerror="this.style.display='none'; this.nextElementSibling.style.display='block';">
+                                <div style="display: none; background-color: #f8f9fa; border: 2px solid black; padding: 20px; border-radius: 8px; color: #9A0708; font-weight: bold;">
+                                    [RICA LOGO PLATZHALTER]
+                                </div>
+                            </div>
+                            <h4 class="mb-1" style="color: #85AA99;">RICA Transparenz</h4>
+                            <h4 class="mb-3" style="color: #85AA99;">Reine Inhaltsstoffe für gesundes Haar</h4>
+                            <p class="lead">RICA hat alle unnötigen Inhaltsstoffe aus den Produkten entfernt und transparente Formeln entwickelt, die weder dir noch der Umwelt schaden.</p>
+                            <div style="columns: 2; column-gap: 20px; font-size: 0.9em;">
+                                <p style="margin-bottom: 5px;">KEINE Parabene</p>
+                                <p style="margin-bottom: 5px;">KEINE Sulfate: SLS & SLES</p>
+                                <p style="margin-bottom: 5px;">KEINE Phthalate</p>
+                                <p style="margin-bottom: 5px;">KEIN Mineralöl</p>
+                                <p style="margin-bottom: 5px;">KEIN Formaldehyd</p>
+                                <p style="margin-bottom: 5px;">KEINE Formaldehydabspalter</p>
+                                <p style="margin-bottom: 5px;">KEIN Oxybenzon</p>
+                                <p style="margin-bottom: 5px;">KEIN Steinkohlenteer</p>
+                                <p style="margin-bottom: 5px;">KEIN Hydrochinon</p>
+                                <p style="margin-bottom: 5px;">KEIN Triclosan</p>
+                                <p style="margin-bottom: 5px;">KEIN Triclocarban</p>
+                                <p style="margin-bottom: 5px;">KEIN Ethylacrylat</p>
+                                <p style="margin-bottom: 5px;">KEIN Ethylmethacrylat</p>
+                                <p style="margin-bottom: 5px;">KEIN Methylmethacrylat</p>
+                                <p style="margin-bottom: 5px;">KEIN Butylmethacrylat</p>
+                                <p style="margin-bottom: 5px;">KEIN Hydroxypropylmethacrylat</p>
+                                <p style="margin-bottom: 5px;">KEIN Tetrahydrofurfurylmethacrylat</p>
+                                <p style="margin-bottom: 5px;">KEIN Trimethylolpropantrimethacrylat</p>
+                                <p style="margin-bottom: 5px;">KEINE Aluminiumsalze</p>
+                                <p style="margin-bottom: 5px;">KEINE tierischen Öle, Moschus oder Fette</p>
+                            </div>
                         </div>
                     </div>
                 </div>
@@ -177,8 +270,10 @@
                     <h3>Öffnungszeiten</h3>
                     <ul class="list-unstyled">
                         <li>Montag: geschlossen</li>
-                        <li>Dienstag - Freitag: 9:00 - 18:00</li>
-                        <li>Samstag: 9:00 - 14:00</li>
+                        <li>Dienstag - Donnerstag: 9:00 - 18:00</li>
+                        <li>Freitag: 10:00 - 20:00</li>
+                        <li>Samstag: 9:00 - 15:00</li>
+                        <li>Und nach Vereinbarung</li>
                         <li>Sonntag: geschlossen</li>
                     </ul>
                     <h3 class="mt-4">Terminvereinbarung</h3>
