Mobile optimization: improved responsive design for product cards, better spacing and layout on smartphones

--- a/index.html
+++ b/index.html
@@ -123,8 +123,8 @@
         <div class="container">
             <h2 class="text-center mb-5">Unsere Produkte</h2>
             <div class="row justify-content-center align-items-stretch">
-                <div class="col-md-6 d-flex">
-                    <div class="card p-4 shadow-sm d-flex flex-column justify-content-center w-100" style="height: 300px;">
+                <div class="col-12 col-md-6 d-flex mb-4 mb-md-0">
+                    <div class="card p-4 shadow-sm d-flex flex-column justify-content-center w-100" style="min-height: 250px;">
                         <div class="card-body">
                             <h4 class="mb-3" style="color: #9A0708;">RICA Haircare</h4>
                             <p class="lead">Bei uns im Salon setzen wir auf Rica Haircare – eine Marke, die für natürliche Pflege, nachhaltige Werte und professionelles Styling steht.</p>
@@ -132,7 +132,7 @@
                         </div>
                     </div>
                 </div>
-                <div class="col-md-4 d-flex">
+                <div class="col-12 col-md-4 d-flex">
                     <div class="text-center d-flex align-items-center w-100">
                         <img src="Images/acronimo.jpg" alt="Rica Haircare Produkte" class="img-fluid rounded shadow" style="max-height: 300px; object-fit: cover; width: 100%;">
                     </div>
@@ -140,22 +140,22 @@
             </div>
 
             <!-- Zweite Produktkarte -->
-            <div class="row justify-content-center align-items-stretch mt-5">
-                <div class="col-md-5">
+            <div class="row justify-content-center align-items-stretch mt-4 mt-md-5">
+                <div class="col-12 col-md-5 mb-4 mb-md-0">
                     <!-- Bild (oben) -->
-                    <div style="background-color: #f8f9fa; border-radius: 10px; overflow: hidden; margin-bottom: 30px;">
+                    <div style="background-color: #f8f9fa; border-radius: 10px; overflow: hidden; margin-bottom: 20px;">
                         <img src="Images/Naturica1_kl.jpg" alt="Mediterrane Haarpflege" class="img-fluid rounded shadow" style="width: 100%; height: auto; object-fit: contain; display: block;">
                     </div>
                     <!-- Dritte Produktkarte (unten) -->
-                    <div class="card shadow-sm" style="height: 100px; display: flex; align-items: center; justify-content: center;">
+                    <div class="card shadow-sm" style="min-height: 80px; display: flex; align-items: center; justify-content: center;">
                         <div style="padding: 15px;">
                             <h4 class="mb-1" style="color: #85AA99;">Professionelle Haarpflege</h4>
                             <h5 class="mb-0" style="color: #85AA99;">aus 96% natürlichen Inhaltsstoffen.</h5>
                         </div>
                     </div>
                 </div>
-                <div class="col-md-5 d-flex">
-                    <div class="card p-4 shadow-sm d-flex flex-column justify-content-center w-100" style="height: 100%;">
+                <div class="col-12 col-md-5 d-flex">
+                    <div class="card p-4 shadow-sm d-flex flex-column justify-content-center w-100" style="min-height: 300px;">
                         <div class="card-body">
                             <h4 class="mb-1" style="color: #85AA99;">100 % vegan</h4>
                             <h4 class="mb-3" style="color: #85AA99;">Schönheit aus der Natur</h4>
@@ -168,44 +168,45 @@
             </div>
 
             <!-- Vierte Produktkarte -->
-            <div class="row justify-content-center mt-5">
-                <div class="col-md-6">
+            <div class="row justify-content-center mt-4 mt-md-5">
+                <div class="col-12 col-md-6 mb-4 mb-md-0">
                     <!-- Text (links) -->
-                    <div class="card p-4 shadow-sm">
+                    <div class="card p-4 shadow-sm" style="min-height: 200px;">
                         <div class="card-body">
                             <h4 class="mb-1" style="color: #9A0708;">Chromoplus</h4>
                             <h4 class="mb-3" style="color: #9A0708;">Strahlende Farben mit gutem Gewissen</h4>
                             <p class="lead">Mit Ricas's Chromoplus bieten wir dir eine Haarfarbe, die nicht nur wunderschöne Ergebnisse zaubert, sondern auch auf dich und die Natur Rücksicht nimmt. Die Farben sind 100 % vegan, frei von belastenden Stoffen wie Parabenen oder Sulfaten und dermatologisch getestet – für ein angenehmes und sicheres Farberlebnis.</p>
                             <p>Dank wertvoller Inhaltsstoffe wie Marula-Öl, Quinoa und mediterranen Pflanzenextrakten wird dein Haar während der Coloration gepflegt, geschützt und gestärkt. So bleibt es gesund, glänzend und voller Lebenskraft.</p>
-                            <p>Ob sanfte Tönung oder intensive Veränderung – mit über 100 Nuancen finden wir gemeinsam den perfekten Farbton, der deine Persönlichkeit unterstreicht. Und das Beste: die Rezeptur schützt deine Haarfarbe, sodass sie lange strahlend schön bleibt.</p>
-                            <p>Bei uns im Salon bedeutet Coloration nicht nur ein neuer Look – es ist ein Verwöhnmoment für dich und dein Haar.</p>
+                            <p class="d-none d-md-block">Ob sanfte Tönung oder intensive Veränderung – mit über 100 Nuancen finden wir gemeinsam den perfekten Farbton, der deine Persönlichkeit unterstreicht. Und das Beste: die Rezeptur schützt deine Haarfarbe, sodass sie lange strahlend schön bleibt.</p>
+                            <p class="d-none d-md-block">Bei uns im Salon bedeutet Coloration nicht nur ein neuer Look – es ist ein Verwöhnmoment für dich und dein Haar.</p>
                         </div>
                     </div>
                 </div>
-                <div class="col-md-4 d-flex align-items-start">
+                <div class="col-12 col-md-4 d-flex align-items-start">
                     <!-- Chromoplus Bild rechts -->
-                    <div style="background-color: #f8f9fa; border-radius: 10px; overflow: hidden; width: 100%; display: flex; justify-content: flex-end;">
-                        <img src="Images/chromoplus2.png" alt="Chromoplus Haarfarben" class="img-fluid rounded shadow" style="width: 100%; height: auto; object-fit: contain;">
+                    <div style="background-color: #f8f9fa; border-radius: 10px; overflow: hidden; width: 100%; display: flex; justify-content: center;">
+                        <img src="Images/chromoplus2.png" alt="Chromoplus Haarfarben" class="img-fluid rounded shadow" style="width: 100%; height: auto; object-fit: contain; max-height: 250px;">
                     </div>
                 </div>
             </div>
 
             <!-- Fünfte Produktkarte - RICA Transparenz -->
-            <div class="row justify-content-center mt-5">
-                <div class="col-md-10">
-                    <div class="card p-4 shadow-sm">
+            <div class="row justify-content-center mt-4 mt-md-5">
+                <div class="col-12 col-md-10">
+                    <div class="card p-3 p-md-4 shadow-sm">
                         <div class="card-body">
                             <div class="text-center mb-3">
                                 <!-- Logo Platzhalter -->
-                                <img src="Images/Ricalogo.png" alt="RICA Logo" class="img-fluid" style="max-height: 80px; background-color: #f8f9fa; border: 2px solid black; padding: 10px; border-radius: 8px;" onerror="this.style.display='none'; this.nextElementSibling.style.display='block';">
-                                <div style="display: none; background-color: #f8f9fa; border: 2px solid black; padding: 20px; border-radius: 8px; color: #9A0708; font-weight: bold;">
+                                <img src="Images/Ricalogo.png" alt="RICA Logo" class="img-fluid" style="max-height: 60px; background-color: #f8f9fa; border: 2px solid black; padding: 8px; border-radius: 8px;" onerror="this.style.display='none'; this.nextElementSibling.style.display='block';">
+                                <div style="display: none; background-color: #f8f9fa; border: 2px solid black; padding: 15px; border-radius: 8px; color: #9A0708; font-weight: bold; font-size: 0.9em;">
                                     [RICA LOGO PLATZHALTER]
                                 </div>
                             </div>
                             <h4 class="mb-1" style="color: #85AA99;">RICA Transparenz</h4>
                             <h4 class="mb-3" style="color: #85AA99;">Reine Inhaltsstoffe für gesundes Haar</h4>
                             <p class="lead">RICA hat alle unnötigen Inhaltsstoffe aus den Produkten entfernt und transparente Formeln entwickelt, die weder dir noch der Umwelt schaden.</p>
-                            <div style="columns: 2; column-gap: 20px; font-size: 0.9em;">
+                            <p class="d-none d-md-block">RICA hebt nur das hervor, was wirklich in den Produkten steckt – und zeigt dir offen und selbstbewusst, welche Inhaltsstoffe du darin nicht findest:</p>
+                            <div class="d-none d-md-block" style="columns: 2; column-gap: 20px; font-size: 0.9em;">
                                 <p style="margin-bottom: 5px;">KEINE Parabene</p>
                                 <p style="margin-bottom: 5px;">KEINE Sulfate: SLS & SLES</p>
                                 <p style="margin-bottom: 5px;">KEINE Phthalate</p>
